# glass

./: .gitignore  Readme.md  compose.dev.yaml  compose.yaml  count-lines.py
.github/workflows/: codeql.yml
client/: Dockerfile  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
client/src/: App.tsx  AppBar.tsx  Header.tsx  Layout.tsx  SuspenseWrapper.tsx  index.css  main.tsx  router.tsx
client/src/api/: fileupload.ts  server.ts
client/src/examples/: assignments.ts  students.ts
client/src/hooks/: auth.ts  quiz.ts
client/src/store/: store.ts
client/src/utils/: format.ts  string.ts
llm/: Dockerfile  Dockerfile.dev  pyproject.toml
server/: .gitignore  Dockerfile  go.mod  go.sum  main.go
server/app/config/: db.go
server/app/error/: auth.go
server/app/firebase/: errors.go  firebase.go  store.go
server/app/handlers/: assignment.go  constants.go  course.go  enrollment.go  grade.go  material.go  quiz.go  submission.go  user.go  utils.go
server/app/middlewares/: auth.go  erros.go  quiz.go
server/app/models/: assignment.go  course.go  enrollment.go  file.go  grade.go  meterial.go  quiz.go  submission.go  tablenames.go  user.go
server/app/routes/: assignment.go  course.go  enrollment.go  grade.go  material.go  quiz.go  submission.go  user.go
server/app/services/: assignment.go  course.go  enrollment.go  errors.go  file.go  grade.go  material.go  quiz.go  submission.go  user.go
server/tests/: authmid_test.go  courses.go  firebase_store_test.go
server/tests/routes/: users_test.go
server/tests/setup/: db.go
(+54 files in other folders)
