[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Utkarsh Priyadarshi <utkarshpriyadarshi5026@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.21"
fastapi = "^0.115.11"
langchain-openai = "^0.3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
